<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="angelapps.com.tareacourseramascotas.menus.AboutActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar221"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            ></android.support.v7.widget.Toolbar>



    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_below="@id/appBar221"
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardview_dark_background"
        android:layout_marginBottom="20dp"
        >

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imAbout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            app:civ_border_color="#000"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvCompañia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_below="@id/imAbout"
            android:text="@string/identi"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCompañia"
            android:layout_centerInParent="true"
            android:text="@string/Bio"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:layout_marginBottom="20dp"
            />



    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/rl1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerInParent="true"

        >

        <TextView
            android:textSize="20dp"
            android:id="@+id/tvPensamiento"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/pensamiento"
            />

        <TextView
            android:layout_below="@id/tvPensamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="Simon Bolivar."
            />
    </RelativeLayout>



</RelativeLayout>
