<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="angelapps.com.tareacourseramascotas.menus.ContactoActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:ignore="ExtraText">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            android:elevation="10dp"
            ></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_below="@id/appBar23"
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="30dp"
                android:layout_marginTop="25dp"
                android:layout_height="30dp"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILprimerimputlayout"
                android:layout_marginTop="@dimen/marge_superior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_input"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textoNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILcuartoinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/corre_input"
                    android:singleLine="true"
                    android:imeOptions="actionNext"

                    />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/TILquintolyout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textoMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mensaje_input"
                />





        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

    <Button
        android:id="@+id/botonEnviar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:hint="Enviar"
        >

    </Button>

    </RelativeLayout>
